# live-drf-api

./: .gitignore  README.md  pyproject.toml
config/: constants.py  settings.py  urls.py
live/: models.py  serializers.py  urls.py  views.py
live/migrations/: 0001_initial.py  0002_alter_program_description_alter_program_updated_at.py
lives/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
lives/management/commands/: seed_hosts.py  seed_programs.py
lives/migrations/: 0001_initial.py  0002_alter_program_description_alter_program_updated_at.py  0002_alter_program_stream_status.py  0003_alter_program_id_alter_program_stream_status.py  0004_alter_program_id.py
users/: admin.py  models.py
