[tool.poetry]
name = "live-drf-api"
version = "0.1.0"
description = ""
authors = ["LeeJongEun <bellsilver7@gmail.com>"]
readme = "README.md"
packages = [{ include = "live_drf_api" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
django-seed = "^0.3.1"
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
